tests/negative/neg_task_shared_subprogram_global.safe
-- Test: neg_task_shared_subprogram_global
-- Description: Two tasks reach package-global effects through shared callees.
--   The reachability is genuinely transitive through Wrapper -> Helper.
-- Expected: REJECT task_variable_ownership

package Neg_Task_Shared_Subprogram_Global

   type Counter is range 0 to 100;

   Shared : Counter = 0;

   function Helper

      Shared = Shared + 1;

   function Wrapper

      Helper;

   task A

      loop
         Helper;

   task B

      loop
         Wrapper;

